[gd_scene load_steps=5 format=2]

[ext_resource path="res://replace_me/gui_example/pbd_splash_screen.gd" type="Script" id=1]
[ext_resource path="res://replace_me/gui_example/pale_blue_dot.png" type="Texture2D" id=2]
[ext_resource path="res://ivoyager/gui_widgets/main_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ivoyager/gui_widgets/version_label.tscn" type="PackedScene" id=4]

[node name="PBDSplashScreen" type="ColorRect"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.778

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
offset_left = 59.895
offset_right = 1740.1
offset_bottom = 945.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="AspectRatioContainer/TextureRect"]
anchor_top = 0.039
anchor_right = 0.137
anchor_bottom = 0.944
offset_left = 16.0
offset_top = 13.145
offset_right = -14.1888
offset_bottom = -0.0800781

[node name="MainMenu" parent="AspectRatioContainer/TextureRect/VBox" instance=ExtResource( 3 )]
unique_name_in_owner = true
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ProjectTemplateLabel" type="Label" parent="AspectRatioContainer/TextureRect/VBox"]
offset_top = 4.0
offset_right = 199.0
offset_bottom = 771.0
size_flags_vertical = 3
text = "Project Template"
valign = 2

[node name="VersionLabel" parent="AspectRatioContainer/TextureRect/VBox" instance=ExtResource( 4 )]
offset_top = 775.0
offset_right = 199.0
offset_bottom = 789.0

[node name="CopyrightLabel" type="Label" parent="AspectRatioContainer/TextureRect/VBox"]
offset_top = 793.0
offset_right = 199.0
offset_bottom = 841.0
text = "
(c) 2017-2023
Charlie Whitfield"

[node name="PBDCaption" type="Label" parent="AspectRatioContainer/TextureRect"]
unique_name_in_owner = true
anchor_left = 0.73
anchor_top = 0.055
anchor_right = 0.967
anchor_bottom = 0.945
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
text = "LABEL_PBD_SHORT"
valign = 2
autowrap = true
